--- a/style.css
+++ b/style.css
@@ -64,6 +64,21 @@
     width: 500px;
 }
 
+.ex-6-img:hover{
+    filter: grayscale(100%);
+}
+
+.ex-7-img:hover{
+    filter: grayscale(100%);
+    transition: 2s;
+}
+
+.ex-8-img:hover{
+    filter: grayscale(100%);
+    transition: 2s;
+    border-radius: 50%;
+}
+
 .ex-9-img {
     margin: 50px 100px;
     width: 400px;
