--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@
 
 .ex-7-img:hover{
     filter: grayscale(100%);
+    filter: blur(10px);
     transition: 2s;
 }
 
@@ -82,6 +83,10 @@
 .ex-9-img {
     margin: 50px 100px;
     width: 400px;
+}
+
+.ex-9-img:hover{
+    filter: grayscale(100%);
 }
 .ex-10-icon {
     font-size: 60px;
