--- a/style.css
+++ b/style.css
@@ -92,9 +92,20 @@
     border-radius: 50%;
     transform: scale(0.7);
 }
+
 .ex-10-icon {
     font-size: 60px;
+    animation: load 1s linear infinite;
+
 }
+
+@keyframes load {
+    0% {
+        transform: rotate(1turn);
+    }
+}
+
+
 .ex-11-icon {
     font-size: 60px;
 }
