--- a/style.css
+++ b/style.css
@@ -96,7 +96,6 @@
 .ex-10-icon {
     font-size: 60px;
     animation: load 1s linear infinite;
-
 }
 
 @keyframes load {
@@ -105,10 +104,28 @@
     }
 }
 
-
 .ex-11-icon {
     font-size: 60px;
+    
 }
+
+.ex-11-icon:hover {
+    animation: clock 2s linear ;
+}
+
+
+@keyframes clock{
+    0% {
+        transform: rotate(0);
+    }
+    90% {
+        transform: rotate(315deg);
+    }
+    100% {
+        transform: rotate(0);
+    }
+}
+
 .ex-12-button, .ex-13-button {
     position: relative;
     display: block;
